Minor changes to presentation

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 <body>
     <div id="map"></div>
     <div id="info">
-        <div>Station Maidenhead: <span id="station-maidenhead"></span></div>
-        <div>Clicked Maidenhead: <span id="clicked-maidenhead"></span></div>
+        <div>Station Location: <code><span id="station-maidenhead"></span></code></div>
+        <div>Selected Location: <code><span id="clicked-maidenhead"></span></code></div>
         <div>Distance: <span id="distance"></span></div>
         <div>Bearing: <span id="bearing"></span></div>
         <div>Beamwidth: <span id="beamwidth"></span></div>
